// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Large Secondary Button matches the snapshot 1`] = `
<button
  className="UQcCU"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the beacon button matches the snapshot 1`] = `
<button
  aria-label=""
  className="jvJtrV"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button handling an onclick event 1`] = `
<button
  className="kGgCRK"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button handling an onclick event 2`] = `
<button
  className="kGgCRK"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button matches the snapshot 1`] = `
<button
  className="kGgCRK"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the button with button type given matches the snapshot 1`] = `
<button
  className="kGgCRK"
  type="button"
>
  ButtonValue
</button>
`;
